namespaces/live.cloud-platform.service.justice.gov.uk/prototype-kit-training/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "prototype-kit-training"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "OPG"
    cloud-platform.justice.gov.uk/slack-channel: "prototype-kit-training"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "opg-org-infra: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/prototype-kit-training"
    cloud-platform.justice.gov.uk/team-name: "opg-org-infra"
    cloud-platform.justice.gov.uk/review-after: ""
